apps/course-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: course-app
spec:
    replicas: "${app_replicas}"
    selector:
        matchLabels:
            app: course-app
    template:
        metadata:
           labels:
                app: course-app
        spec:
           containers:
                -   name: course-app
                    image: demo.goharbor.io/lesson06/course-app:v1.0
                    ports:
                        - containerPort: 8080
                    livenessProbe:
                       httpGet:
                          path: /healthz
                          port: 8080
                       initialDelaySeconds: 10
                       periodSeconds: 5
                    readinessProbe:
                       httpGet:
                          path: /readyz
                          port: 8080
                       initialDelaySeconds: 10
                       periodSeconds: 5
    strategy:
       type: RollingUpdate
       rollingUpdate:
          maxSurge: 25%
          maxUnavailable: 40%
