apps/course-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName:  traefik
  tls:
     - hosts:
         - localhost #course-app.local
  rules:
    - host: localhost #course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-svc
                port:
                  number: 80
